--- a/tooearly.html
+++ b/tooearly.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,7 +5,7 @@
 </head>
 	<body style = "background-color:green;">
 		<h1 style="color:blue;"> 
-			Title of Article: Isis murdered 80 Iraqis in a terror attack on Friday-but all anyone could talk about was Parsons Green
+			Title of Article: Isis murdered 80 Iraqis in a terror attack on Friday-but all anyone could talk about was Parsons Green <br>
 			Editorial by Kristen Cunningham 
 		</h1>
 
@@ -24,7 +23,17 @@
 			The tenth museum on this list is the Imperial War Museum in London which relays stories from those who lived the wars, from WWI to current affairs. Ninth on this list is the Kelvingrove Art Gallery and Museum in Glasgow which houses a wide array of art, from classics to more modern pieces this stop has a wide variety of art pieces for anyone. The eighth stop on this list is the Titanic Belfast museum in Belfast, with a striking exterior this museum pays tribute to one of the most tragic events to ever happen by giving insight to the process from building the structure to its only trip. Entry number seven on this list is the National Railway Museum in York that shows the vast history of the UK’s railway system. The sixth spot is the National Museum of Scotland in Edinburgh shows some of the most popular artwork and the biggest scientific breakthroughs from the Scottish. Number five on this list is the Churchill War Rooms in London, where one of Churchill’s secret bunkers has been turned into a WWII museum. 				The fourth entry is from the Natural History Museum in London features some interesting parts of the natural, such as the skeleton of a giant blue whale named Hope. Third on the list is the British Museum in London featuring ancient history telling the stories of different empires through the times. Second on the list is the National Gallery in London host a lot of art pieces that attract a lot of people to the museum. The number one museum in the UK is the Victoria and Albert Museum in London where art and fashion are the main focus pieces in the museum. 
 			Looking at this upcoming trip some of the venues on this list spike my interests, such as the Natural History Museum and the Churchill War Rooms. There is at least one location that I can think of that could have made this list since it had a major impact on WWII, and that would be Bletchley Park. Along with it being the home of the first computer, and the computer that broke the enigma machine code. Along with some more technological sites, but I think this would be a good list of sites to consider to visit.
 		</p>
-
+		
+		<h1 style="color:blue;">
+			Facebook UK LTD <br>
+			Justice Martinez
+		</h1>
+		
+		<p>
+			The British expansion of Facebook is a subsidiary of Facebook in the US and operates outside of London, just to the west in Egham. The subsidiary of Facebook does not house any high-level executives for the company. This makes sense with Facebook UK and Facebook Ireland both being in relatively close proximity. 
+			Recently with new laws being passed by parliament involving tax breaks for companies to retrieve any resources from companies within the country and resources being imported come with a higher tax. This new reform persuaded Facebook UK to restructure where they got their resources and brought a lot of their resources into the UK. By doing this even though revenues quadrupled the tax that was paid did not quadruple. With this lower taxation has allowed this subsidiary to create new jobs, up to 500 for 2017. These jobs will allow this rather small subsidiary of Facebook to continue to grow especially in a modern technological environment such as the UK.
+			With recent terrorist attacks happening within the UK the Prime Minister is looking for ways to bring this under control. One of the options on the table is making social media sites and search engines adhere to regulations that currently govern news organizations. This would mean that companies such as Facebook UK and Google are now responsible for everything that pops up on their website. Anything that the government finds illegal, such as terrorist propaganda, far-right propaganda, pornography, etc., can lead to fines for these companies. Currently for the former two there is a 15years prison sentence for viewing these topics online. Naturally these companies are trying to stop these laws, Facebook has put up $3.2M into preventing this law and Google has spent $6M on this as well.
+		</p>
 
 	</body>
 </html>
